src/QRect.h


// 
// This file has been automatically generated by RaQt_maker V0.0.4.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQRectCtor_1();
EXTERNC void * QWQRectCtor_2(void * topleft, void * bottomright);
EXTERNC void * QWQRectCtor_4(int32_t  left, int32_t  top, int32_t  width, int32_t  height);
EXTERNC int32_t QWQRectx(void * obj);
EXTERNC int32_t QWQRecty(void * obj);
EXTERNC int32_t QWQRectwidth(void * obj);
EXTERNC int32_t QWQRectheight(void * obj);
EXTERNC void QWQRectDtor(void *);